--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:wemosbat]
+; [env:wemosbat]
+; platform = espressif32
+; board = wemosbat
+; framework = arduino
+
+[env:nodemcu-32s]
 platform = espressif32
-board = wemosbat
+board = nodemcu-32s
 framework = arduino
+;upload_port = /dev/ttyUSB*
+; Serial Monitor options
+monitor_speed = 115200
