--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,12 @@ board = nodemcu-32s
 framework = arduino
 lib_deps =
   ArduinoJson
-;upload_port = /dev/ttyUSB*
+  PubSubClient@~2.8
+ upload_port = COM1
+; upload_port = 192.168.1.7
+; upload_protocol = espota
+; upload_flags =
+;     --port=3232
+;     --auth=8Zeichen
 ; Serial Monitor options
 monitor_speed = 115200
